<resources>
    <string name="app_name">EventUs</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login Failed"</string>
    <string name="prompt_username">Username Or Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_events">Manage Events</string>
    <string name="back">back</string>
    <string name="placeholder">place holder</string>
    <string name="descriptionPlaceholder">a\n: an act of describing\nspecifically : discourse intended to give a mental image of something experienced\nbeautiful beyond description\ngave an accurate description of what he saw\nb\n: a statement or account giving the characteristics of someone or something : a descriptive statement or account\nThe review was little more than a description of the film\'s plot.\n2\n: kind or character especially as determined by salient (see SALIENT entry 1 sense 3b) features\nsomeone fitting the suspect\'s description\nhad toys of every description\nopposed to any tax of so radical a description</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="message_title">Message Title</string>
    <string name="from_sender">From: Sender</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="todo">TODO</string>
    <string name="event">Event</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="messages">Messages</string>
    <string name="my_events">My Events</string>
    <string name="past_events">Past Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="search_2">"      Search"</string>
    <string name="do_not_have_an_account">Do Not Have An Account?</string>
    <string name="let_s_sign_up_now">Let\'s Sign Up Now!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="i_am_an_organizer">I Am An Organizer</string>
    <string name="i_am_a_participant">I Am A Participant</string>
    <string name="register">Register</string>
    <string name="already_a_member_sign_in_here">Already a member? Sign in here!</string>
    <string name="participants">Participants</string>
    <string name="join_event">Join Event</string>
    <string name="leave_event">Leave Event</string>
    <string name="replay">Replay</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="discover_exciting_events_near_you_and_connect_with_like_minded_people">Discover exciting events near you and connect with like-minded people</string>
    <string name="connect_celebrate_experience">Connect. Celebrate. Experience.</string>
    <string name="welcome_to_eventus">Welcome to EventUs!</string>
    <string name="don_t_have_an_account_yet_sign_up_now">Don\'t have an account yet? Sign up now!</string>
    <string name="log_in">Log In</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="save_event">Save Event</string>
    <string name="contact_organizer">Contact organizer</string>
    <string name="edit_event">Edit Event</string>
    <string name="save_rating">Save Rating</string>
    <string name="_0_ratings">0 Ratings</string>
    <string name="description">Description</string>
    <string name="pick_date">Pick Date</string>
    <string name="event_details">Event Details</string>
    <string name="save">Save</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="new_email">New email</string>
    <string name="change_email">Change Email</string>
    <string name="new_name">New name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="send">Send</string>
    <string name="message_content">Message content...</string>
    <string name="subject">Subject</string>
    <string name="create_event">Create Event</string>
    <string name="event_description">Event Description</string>
    <string name="set_private">set private</string>
    <string name="event_location">Event Location</string>
    <string name="event_date">Event Date</string>
    <string name="event_name">Event Name</string>
    <string name="user_name">User Name</string>
    <string name="view_past_events">View past Events</string>
    <string name="view_upcoming_events">View upcoming Events</string>
    <string name="send_message">Send Message</string>
    <string name="profile">Profile</string>
    <string name="new_event">New Event</string>
    <string name="create_message">Create Message</string>
    <string name="reply_title">Reply: %s</string>
    <string name="from_sender2">From: %s</string>


</resources>