<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screens.EditProfile.EditProfileFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <!-- Add a top app bar with a title -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorButtonDefault"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textColor="@color/dark_gray"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </com.google.android.material.appbar.MaterialToolbar>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profilePhotoImageView"
            android:layout_width="@dimen/profile_profilePicSize"
            android:layout_height="@dimen/profile_profilePicSize"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/profile_picture"
            android:focusable="true"
            android:src="@drawable/ic_profile" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Username"
            style="@style/CustomFragmentEditTextField"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="@string/new_name"
            android:hint="@string/new_name"
            android:inputType="textPersonName"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/textfield_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            style="@style/LargeTextField"
            android:inputType="textMultiLine"
            android:text="@string/placeholder" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/changeEmail"
            style="@style/CustomFragmentTextFieldTitle"
            android:text="@string/change_email" />

        <EditText
            android:id="@+id/email"
            style="@style/CustomFragmentEditTextField"
            android:autofillHints="@string/new_email"
            android:hint="@string/new_email"
            android:inputType="textEmailAddress" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/changePassword"
            style="@style/CustomFragmentTextFieldTitle"
            android:text="@string/change_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomFragmentEditTextField"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:hint="@string/old_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomFragmentEditTextField"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:hint="@string/new_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/saveUserDetailsButton"
        style="@style/DefaultClickableButton"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:textColor="@color/dark_gray" />

</LinearLayout>