<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CustomFragmentScreen"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <!-- Add a top app bar with a title -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorButtonDefault"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_details"
                android:textColor="@color/dark_gray"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </com.google.android.material.appbar.MaterialToolbar>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/eventNameTextView"
        style="@style/eventTitleField"
        android:autofillHints="Name your event"
        android:inputType="text"
        android:text="@string/placeholder"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eventDateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="Pick date and time"
            android:focusable="false"
            android:inputType="datetime"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/pickDateButton"
            style="@style/DefaultClickableButton"
            android:onClick="onPickDateClick"
            android:text="@string/pick_date"
            android:textColor="@color/dark_gray"/>

    </LinearLayout>


    <EditText
        android:id="@+id/eventLocationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:inputType="text"
        android:textSize="16sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/DescriptionText"
        style="@style/CustomFragmentSubTitle"
        android:text="@string/description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:background="@drawable/textfield_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventDescriptionTextView"
            android:layout_width="match_parent"
            style="@style/LargeTextField"
            android:inputType="textMultiLine"
            android:text="@string/placeholder" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:rating="0"
        android:stepSize="0.5" />

    <TextView
        android:id="@+id/ratingCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/_0_ratings"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/saveRatingButton"
        style="@style/DefaultClickableButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/save_rating"
        android:textColor="@color/dark_gray"/>

    <Button
        android:id="@+id/editEventButton"
        style="@style/DefaultClickableButton"
        android:layout_marginTop="8dp"
        android:text="@string/edit_event"
        android:layout_gravity="center"
        android:textColor="@color/dark_gray"/>

    <Button
        android:id="@+id/contanctUserButton"
        style="@style/DefaultClickableButton"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/contact_organizer"
        android:textColor="@color/dark_gray"/>

    <Button
        android:id="@+id/saveEventButton"
        style="@style/DefaultClickableButton"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/save_event"
        android:textColor="@color/dark_gray"/>


</LinearLayout>