<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:importantForAccessibility="no"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_to_eventus"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/connect_celebrate_experience"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/explanationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/discover_exciting_events_near_you_and_connect_with_like_minded_people"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/loginRegisterButton"
        style="@style/RoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/let_s_get_started" />

</LinearLayout>
