<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CustomFragmentScreen"
    android:orientation="vertical"
    tools:context=".ui.screens.UserMainScreen.CreateEventFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <!-- Add a top app bar with a title -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorButtonDefault"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_event"
                android:textColor="@color/dark_gray"
                android:textSize="30sp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eventNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:autofillHints="@string/event_name"
            android:hint="@string/event_name"
            android:inputType="textShortMessage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/eventDateEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/event_date"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/event_date"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/pickDateButton"
                style="@style/DefaultClickableButton"
                android:text="@string/pick_date"
                android:textColor="@color/dark_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/eventLocationEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/event_location"
                android:inputType="textShortMessage"
                tools:ignore="TextFields" />

            <CheckBox
                android:id="@+id/setPrivateEventCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_private" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/textfield_background">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="top"
                android:hint="@string/event_description"
                android:inputType="textMultiLine" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/createEventButton"
        style="@style/DefaultClickableButton"
        android:layout_marginTop="32dp"
        android:text="@string/create_event"
        android:layout_gravity="center"
        android:textColor="@color/dark_gray" />
</LinearLayout>