<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_user_profile"
    style="@style/CustomFragmentScreen"
    android:orientation="vertical"
    tools:context=".ui.screens.Profile.ViewUserProfileActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_base_user_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_base_user_profile" />

    <Button
        android:id="@+id/sendMessageButton"
        style="@style/DefaultClickableButton"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/send_message"
        android:textColor="@color/dark_gray"/>

    <Button
        android:id="@+id/viewUpcomingUserEventsButton"
        style="@style/DefaultClickableButton"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/view_upcoming_events"
        android:textColor="@color/dark_gray"/>

    <Button
        android:id="@+id/viewPastUserEventsButton"
        style="@style/DefaultClickableButton"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/view_past_events"
        android:textColor="@color/dark_gray" />

    <!-- CardView for back button -->
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/colorButtonDefault">

        <!-- ImageButton for back navigation -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:padding="16dp"
            app:tint="@color/dark_gray" />
    </androidx.cardview.widget.CardView>

</LinearLayout>