<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <!-- Welcome Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="32dp"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <!-- Login Prompt Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="@string/let_s_login"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Email TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/RoundedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/RoundedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Organizer Checkbox -->
    <CheckBox
        android:id="@+id/checkOrganizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I am an organizer"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"/>

    <!-- Login Button -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/colorButtonDefault">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"/>

    </com.google.android.material.card.MaterialCardView>

    <!-- Registration Link -->
    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/don_t_have_an_account_yet_sign_up_now"
        android:textColor="@android:color/black"
        android:textStyle="italic" />

</LinearLayout>
